# Tech-Avant-POC

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/api/auth/: connector.py  functions.py
backend/app/api/root/: connector.py  functions.py
backend/app/core/: logger.py  origins.py
backend/app/core/lib/: auth.py  db.py
backend/app/models/: model.py  sql_model.py
frontend/: index.html  package-lock.json  package.json
