[project]
name = "tech_avant_backend"
version = "0.1.0"
description = "FastAPI server for tech-avant-backend - G7CR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.1",
    "fastapi[standard]>=0.116.2",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
